[gd_scene load_steps=13 format=2]

[ext_resource path="res://UGCGame/assets/UI/cog-solid.png" type="Texture" id=1]
[ext_resource path="res://UGCGame/assets/UI/home-solid.png" type="Texture" id=2]
[ext_resource path="res://UGCGame/assets/UI/undo-alt-solid.png" type="Texture" id=3]
[ext_resource path="res://UGCGame/assets/UI/sync-solid.png" type="Texture" id=4]
[ext_resource path="res://UGCGame/src/Game.gd" type="Script" id=5]
[ext_resource path="res://UGCGame/src/ui/Menu/Settings/Settings.tscn" type="PackedScene" id=6]
[ext_resource path="res://UGCGame/src/ui/Btn.tscn" type="PackedScene" id=7]
[ext_resource path="res://UGCGame/src/ui/Menu/Lbl/Lbl.tscn" type="PackedScene" id=8]
[ext_resource path="res://UGCGame/src/Grid/Grid.tscn" type="PackedScene" id=9]
[ext_resource path="res://UGCGame/src/Controller.tscn" type="PackedScene" id=10]
[ext_resource path="res://UGCGame/assets/fonts/Ignotum.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 11 )

[node name="Game" type="Node2D"]
position = Vector2( 739, 157 )
script = ExtResource( 5 )

[node name="Grid" parent="." instance=ExtResource( 9 )]
position = Vector2( 16, 242 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 220, 380 )

[node name="UI_elements" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -40, -43 )

[node name="Undo" parent="UI_elements" instance=ExtResource( 7 )]
anchor_left = -0.0714286
anchor_top = -0.0208333
anchor_right = -0.0714286
anchor_bottom = -0.0208333
margin_left = 64.0
margin_top = 48.0
margin_right = 128.0
margin_bottom = 112.0
texture_normal = ExtResource( 3 )

[node name="Restart" parent="UI_elements" instance=ExtResource( 7 )]
anchor_left = -0.0714286
anchor_top = -0.0208333
anchor_right = -0.0714286
anchor_bottom = -0.0208333
margin_left = 144.0
margin_top = 48.0
margin_right = 208.0
margin_bottom = 112.0
texture_normal = ExtResource( 4 )

[node name="Settings" parent="UI_elements" instance=ExtResource( 7 )]
anchor_left = -0.0714286
anchor_top = -0.0208333
anchor_right = -0.0714286
anchor_bottom = -0.0208333
margin_left = 304.0
margin_top = 48.0
margin_right = 368.0
margin_bottom = 112.0
texture_normal = ExtResource( 1 )

[node name="Home" parent="UI_elements" instance=ExtResource( 7 )]
anchor_left = -0.0714286
anchor_top = -0.0208333
anchor_right = -0.0714286
anchor_bottom = -0.0208333
margin_left = 384.0
margin_top = 48.0
margin_right = 448.0
margin_bottom = 112.0
texture_normal = ExtResource( 2 )

[node name="Lbl" parent="UI_elements" instance=ExtResource( 8 )]
margin_left = 160.0
margin_top = 176.0
margin_right = 352.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 1 )

[node name="Controller" parent="." instance=ExtResource( 10 )]

[node name="Settings_menu" parent="." instance=ExtResource( 6 )]
visible = false
margin_right = 416.0
margin_bottom = 736.0

[connection signal="pressed" from="UI_elements/Undo" to="Controller" method="_on_Undo_pressed"]
[connection signal="pressed" from="UI_elements/Restart" to="Controller" method="_on_Restart_pressed"]
[connection signal="pressed" from="UI_elements/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="UI_elements/Home" to="." method="_on_Home_pressed"]
